--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
 </head>
 <body>
 
-<script src="database.js"></script>
+<script src="cauhinh.js"></script>       <script src="truyen-summer.js"></script>  <script src="truyen-oneshot.js"></script> <script>
+    /* Tạo ra biến MY_NOVELS (biến tổng) 
+       bằng cách gom các biến TRUYEN_1, TRUYEN_2 lại với nhau 
+    */
+    const MY_NOVELS = [
+        TRUYEN_1,
+        TRUYEN_2
+        // Sau này có TRUYEN_3 thì thêm dấu phẩy rồi điền vào đây
+    ];
+</script>
 
 <div class="container">
     <aside>
@@ -213,3 +222,4 @@
 </script>
 </body>
 </html>
+
