--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 
-<script src="cauhinh.js"></script>       <script src="truyen-summer.js"></script>  <script src="truyen-oneshot.js"></script> <script>
+<script src="nhatky.js"></script>       <script src="summerpockets.js"></script>  <script src="one.js"></script> <script>
     /* Tạo ra biến MY_NOVELS (biến tổng) 
        bằng cách gom các biến TRUYEN_1, TRUYEN_2 lại với nhau 
     */
@@ -222,4 +222,5 @@
 </script>
 </body>
 </html>
+
 
