--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 </head>
 <body>
 
-<script src="nhatky.js"></script>       <script src="summerpockets.js"></script>  <script src="one.js"></script> <script>
+<script src="nhatky.js"></script>
+<script src="summerpockets.js"></script>
+<script src="one.js"></script>
     /* Tạo ra biến MY_NOVELS (biến tổng) 
-       bằng cách gom các biến TRUYEN_1, TRUYEN_2 lại với nhau 
-    */
     const MY_NOVELS = [
-        TRUYEN_1,
+        TRUYEN_1, //
         TRUYEN_2
         // Sau này có TRUYEN_3 thì thêm dấu phẩy rồi điền vào đây
     ];
@@ -222,5 +222,6 @@
 </script>
 </body>
 </html>
+
 
 
