--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
 <script src="nhatky.js"></script>
 <script src="summerpockets.js"></script>
 <script src="one.js"></script>
-    /* Tạo ra biến MY_NOVELS (biến tổng) 
+
+<script>
+    // Tạo ra biến MY_NOVELS (Dùng dấu 2 gạch chéo // để ghi chú dòng đơn)
     const MY_NOVELS = [
-        TRUYEN_1, //
+        TRUYEN_1,
         TRUYEN_2
-        // Sau này có TRUYEN_3 thì thêm dấu phẩy rồi điền vào đây
     ];
 </script>
 
@@ -222,6 +223,7 @@
 </script>
 </body>
 </html>
+
 
 
 
