--- a/index.html
+++ b/index.html
@@ -50,17 +50,7 @@
 </head>
 <body>
 
-<script src="nhatky.js"></script>
-<script src="summerpockets.js"></script>
-<script src="one.js"></script>
-
-<script>
-    // Tạo ra biến MY_NOVELS (Dùng dấu 2 gạch chéo // để ghi chú dòng đơn)
-    const MY_NOVELS = [
-        TRUYEN_1,
-        TRUYEN_2
-    ];
-</script>
+<script src="database.js"></script>
 
 <div class="container">
     <aside>
@@ -223,6 +213,7 @@
 </script>
 </body>
 </html>
+
 
 
 
