--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 <div class="container">
     
-    <img class="site-banner" src="https://i.imgur.com/gK4k6i8.jpeg" alt="Header Banner">
+    <img class="site-banner" src="Akane.png" alt="Header Banner">
 
     <div class="body-wrapper">
         
@@ -287,3 +287,4 @@
 </script>
 </body>
 </html>
+
