--- a/dao.html
+++ b/dao.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: #c0d0d0; /* Màu nền xám xanh */
-            font-family: "MS PGothic", "Times New Roman", sans-serif;
+            font-family: "Times New Roman", sans-serif;
             margin: 0; padding: 40px;
             color: #333;
             line-height: 1.6;
@@ -404,4 +404,5 @@
 
 </body>
 </html>
+
 
