--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             /* Màu nền vàng lá rẻ quạt giống ảnh */
             background-color: #eecfa1; 
             /* Nếu bạn có ảnh nền lá rẻ quạt, thay link vào dưới đây */
-            /* background-image: url('hinh-nen-la.jpg'); */
+            /* background-image: url('Akane.png'); */
             font-family: "Times New Roman", Times, serif; /* Font có chân cổ điển */
             margin: 0; padding: 20px;
         }
@@ -93,36 +93,36 @@
 
     <table class="main-table">
         <tr class="header-top">
-            <td style="width: 40%">Tiêu đề (Title)</td>
-            <td style="width: 25%">Nhân vật (Chara)</td>
-            <td style="width: 20%">Tác giả (Author)</td>
-            <td style="width: 15%">Ngày (Date)</td>
+            <td style="width: 40%">Tiêu đề</td>
+            <td style="width: 25%">Nhân vật</td>
+            <td style="width: 20%">Tác giả</td>
+            <td style="width: 15%">Ngày đăng</td>
         </tr>
 
         <tr>
-            <td colspan="4" class="header-title">ONE ~Radiant Season~ SS</td>
+            <td colspan="4" class="header-title">Key</td>
         </tr>
 
         <tr>
-            <td colspan="4" class="header-char">Misaki</td>
+            <td colspan="4" class="header-char">ONE ~Kagayaku kisetsu e~ SS</td>
         </tr>
 
         <tr>
             <td class="story-title">
-                <a href="dao.html">Con đường (Michi)</a>
+                <a href="Nine Half.html">Nine Half</a>
             </td>
             
-            <td rowspan="8" class="col-info">
+            <td rowspan="2" class="col-info">
                 Kawana Misaki<br>
-                <span style="font-size:11px">Hai người sau khi trở về</span>
+                <span style="font-size:11px">Chuyện tình về đêm</span>
             </td>
             
-            <td rowspan="8" class="col-info">KOH</td>
-            <td class="col-date">1999/12/30</td>
+            <td rowspan="2" class="col-info">Maidforum</td>
+            <td class="col-date">08/07/2001</td>
         </tr>
 
         <tr>
-            <td class="story-title"><a href="#">Con chó (Inu)</a></td>
+            <td class="story-title"><a href="トクン、トクン、.html">トクン、トクン、...</a></td>
             <td class="col-date">1998/12/12</td>
         </tr>
         <tr>
@@ -168,3 +168,4 @@
 
 </body>
 </html>
+
