--- a/Nine Half.html
+++ b/Nine Half.html
@@ -48,7 +48,7 @@
 <body>
 
     <div class="content-container">
-        <h2>Misaki - Con đường -</h2>
+        <h2>Nine Half -</h2>
 
         <div class="story-text">
 １
@@ -404,6 +404,7 @@
 
 </body>
 </html>
+
 
 
 
