--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
             <td colspan="4" class="header-char">Little Busters! SS</td>
         </tr>
 
+           <tr>
+            <td class="story-title">
+                <a href="Kud 1.html">Kud 1</a>
+            </td>
+               
          <td rowspan="3" class="col-info">
                 Kudryavka Noumi<br>
                 <span style="font-size:11px">Hàng 18+</span>
@@ -182,5 +187,6 @@
 
 </body>
 </html>
+
 
 
