--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
            <tr>
             <td class="story-title">
-                <a href="Kud 1.html">Kud 1</a>
+                <a href="Kud 1.html">Những điều xấu xa anh thích</a>
             </td>
                
          <td rowspan="3" class="col-info">
@@ -207,6 +207,7 @@
 
 </body>
 </html>
+
 
 
 
